<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_micuenta"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/tronja"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textSize="25dp"
        android:textColor="@color/blau"
        android:layout_gravity="center"
         />

    <ImageButton
        android:id="@+id/imatge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:background="@color/trans"
        android:src="@drawable/cuenta"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/nomSoci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_micuenta"
        android:textSize="17dp"
        android:textColor="@color/tronja"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_socio"
            android:textSize="20dp"
            android:textColor="@color/blanc"/>
        <TextView
            android:id="@+id/numSoci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_socio2"
            android:textSize="20dp"
            android:textColor="@color/blau" />
    </LinearLayout>

    <Button
        android:id="@+id/cerrarsesion"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/tronja"
        android:textSize="17dp"
        android:layout_gravity="center"
        android:background="@drawable/borde_clar"
        android:text="@string/cerrar_seseion"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comunidades"
        android:textSize="20dp"
        android:textColor="@color/blanc"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/ButtonComunidades"
        android:textColor="@color/tronja"
        android:layout_gravity="center"
        android:background="@drawable/borde_clar"
        android:textSize="17dp"
        android:text="@string/seleccionar_comunidades"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        android:gravity="bottom"
        android:orientation="vertical">



    <Button
        android:id="@+id/buttonContactoCuenta"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/borde_blau"
        android:text="@string/contacto"
        android:textSize="15dp"
        android:textColor="@color/blau" />
    </LinearLayout>

</LinearLayout>